--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,3 +3,5 @@
 @import url(base.css);
 @import url(navigation.css);
 @import url(styles.css);
+@import url(accesibility.css);
+@import url(responsive.css);
