--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,6 +2,7 @@
    2. Base Overrides
    -------------------------------------------------------------------------- */
 body {
+  font-family: var(--font-sans);
   background-color: var(--bs-body-bg);
   color: var(--bs-body-color);
 }
